--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output=".target/scala-2.9.1/classes" path="src/main"/>
-	<classpathentry kind="lib" path="/home/jeshua/research/me.jeshua/lib/netlib-java.jar"/>
-	<classpathentry kind="lib" path="/home/jeshua/research/me.jeshua/lib/scalala_2.9.1-1.0.0.RC2-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/home/jeshua/research/me.jeshua/lib/arpack-combo.jar"/>
-	<classpathentry kind="lib" path="/home/jeshua/research/me.jeshua/lib/libs_amd64"/>
+	<classpathentry kind="lib" path="/home/jeshua/programming/me.jeshua/lib/scalala_2.9.1-1.0.0.RC2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/home/jeshua/programming/me.jeshua/lib/netlib-java.jar"/>
+	<classpathentry kind="lib" path="/home/jeshua/programming/me.jeshua/lib/arpack-combo.jar"/>
+	<classpathentry kind="lib" path="/home/jeshua/programming/me.jeshua/lib/libs_amd64"/>
 	<classpathentry kind="lib" path="/home/jeshua/.ivy2/cache/com.github.scala-incubator.io/scala-io-core_2.9.1/jars/scala-io-core_2.9.1-0.2.0.jar"/>
 	<classpathentry kind="lib" path="/home/jeshua/.ivy2/cache/com.github.jsuereth.scala-arm/scala-arm_2.9.1/jars/scala-arm_2.9.1-0.3.jar"/>
 	<classpathentry kind="lib" path="/home/jeshua/.ivy2/cache/org.scala-tools.sbt/sbt-proguard-plugin/jars/sbt-proguard-plugin-0.0.5.jar"/>
@@ -14,8 +14,8 @@
 	<classpathentry kind="lib" path="/home/jeshua/.ivy2/cache/commons-logging/commons-logging/jars/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="/home/jeshua/.ivy2/cache/jfree/jcommon/jars/jcommon-1.0.16.jar"/>
 	<classpathentry kind="lib" path="/home/jeshua/.ivy2/cache/jfree/jfreechart/jars/jfreechart-1.0.13.jar"/>
+	<classpathentry kind="lib" path="/home/jeshua/.ivy2/cache/junit/junit/jars/junit-4.8.jar"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path=".target/scala-2.9.1/classes"/>
 </classpath>
